# x1devtoolkit

./: .gitignore  Anchor.toml  Cargo.toml  README.md  index.html  package.json  vite.config.ts
programs/: README.md
programs/incinerator/: Cargo.toml
programs/incinerator/src/: lib.rs
reference/: ENDPOINTS.md  config.json
scripts/: create-tier-mints.ts  deploy.sh  switch-network.sh
src/: App.tsx
tests/: setup.ts
