[package]
name = "incinerator"
version = "0.1.0"
description = "INCINERATOR — 10-tier Token-2022 token system with on-chain metadata, transfer fees, and burn mechanics"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "incinerator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token-2022", "metadata"] }
spl-token-2022 = "3.0"
spl-token-metadata-interface = "0.3"
